links compte_dooku dark_maul dexter_jettster

--- a/views/characters/compte_dooku.html
+++ b/views/characters/compte_dooku.html
@@ -16,21 +16,20 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Le Compte Dooku</h1>
-                        <p>Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la prélogie. Il apparait dans les films L'Attaque des Clones (2002) et La Revanche des Sith (2005). Dooku est un Seigneur Sith et le commandant suprême de la Confédération des systèmes indépendants.</p>
+                        <p>Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la <a href="../index.html">prélogie</a>. Il apparait dans les films <a href="../movies/movie2.html">L'Attaque des Clones</a> (2002) et <a href="../movies/movie3.html">La Revanche des Sith</a> (2005). Dooku est un Seigneur <a href="../corporations/sith.html">Sith</a> et le commandant suprême de la <a href="../corporations/conseil_separatiste.html">Confédération des systèmes indépendants</a>.</p>
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
-                                <td><a>La Menace fantôme</a>, <a> L'Attaque des clones</a> et </td>
-                                <td>La revanche des Sith</td>
+                                <td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html"> L'Attaque des clones</a> et <a href="../movies/movie3.html">La revanche des Sith</a></td>
                             </tr>
                             <th>Première apparition :</th>
-                            <td><a> L'Attaque des clones</a></td>
+                            <td>L'Attaque des clones</td>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td>Ordre Jedi, puis Sith, CSI</td>
+                                <td><a href="../corporations/jedi.html">Ordre Jedi</a>, puis <a href="../corporations/sith.html">Sith</a>, <a href="../corporations/conseil_separatiste.html">CSI</a></td>
                     
                             </tr>
                             <tr>
@@ -47,7 +46,7 @@
                             </tr>
                             <tr>
                                 <th>Métier :</th>
-                                <td>Maître jedi puis seigneur Sith</td>
+                                <td>Maître <a href="">jedi</a> puis seigneur <a href="../corporations/sith.html">Sith</a></td>
                     
                             </tr>
                             <tr>
@@ -62,9 +61,9 @@
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
                         <p>Brillant chevalier Jedi : <br>
-                        Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la prélogie. Il apparait dans les films L'Attaque des Clones (2002) et La Revanche des Sith (2005). Dooku est un Seigneur Sith et le commandant suprême de la Confédération des systèmes indépendants.</p>
+                        Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la <a href="../index.html">prélogie</a>. Il apparait dans les films <a href="../movies/movie2.html">L'Attaque des Clones</a> (2002) et <a href="../corporations/sith.html">La Revanche des Sith</a> (2005). Dooku est un Seigneur Sith et le commandant suprême de la <a href="../corporations/conseil_separatiste.html">Confédération des systèmes indépendants</a>.</p>
                         <p> Le Sith : <br>
-                        Dooku est approché par Dark Sidious, alias le chancelier Palpatine, qui le convainc que la République est irrémédiablement corrompue et l'invite à devenir Sith (comme il le fait plus tard avec Anakin Skywalker). Dooku accepte et choisit le côté obscur où il prend le nom de Dark Tyranus, une dizaine d'années avant la Guerre des clones. Dark Sidious lui confie alors deux missions extrêmement importantes pour ses plans.</p>
+                        Dooku est approché par Dark Sidious, alias le chancelier <a href="../characters/palpatine.html">Palpatine</a>, qui le convainc que la <a href="../corporations/republique_galactique.html">République</a> est irrémédiablement corrompue et l'invite à devenir <a href="../corporations/sith.html">Sith</a> (comme il le fait plus tard avec Anakin Skywalker). Dooku accepte et choisit le côté obscur où il prend le nom de Dark Tyranus, une dizaine d'années avant la Guerre des clones. Dark Sidious lui confie alors deux missions extrêmement importantes pour ses plans.</p>
                         <p>Lorsque Palpatine découvre le projet du Jedi Sifo Dyas, à savoir la création d'une armée de clones par les cloneurs de Kamino pour la République (projet secret dont le Jedi n'a pas fait part au Conseil), il ordonne à son nouvel apprenti de tuer son ami et de prendre son identité pour mettre le projet à exécution, mais secrètement au profit des Sith. </p>
                         <p>En parallèle, afin que l'armée clone de la République ait un ennemi à la hauteur à affronter afin de justifier son existence, Dark Sidious ordonna à Tyranus la création d'un mouvement Séparatiste.</p>
                 </div>
