--- a/views/characters/dexter_jettster.html
+++ b/views/characters/dexter_jettster.html
@@ -17,14 +17,14 @@
 					<div class="histoire">
                         <h1>Dexter Jettster</h1>
                         <p>Dexter "Dex" Jettster était un cuisiner Besalisk. Juste avant la Guerre des Clones, Jettster était propriétaire du restaurant Chez Dex à Coco Town.
-                        Ayant un passé très divers, soit donc une grande expérience et une grande culture, le Jedi Obi-Wan Kenobi a souvent eu besoin de lui pour avoir des informations.</p>
+                        Ayant un passé très divers, soit donc une grande expérience et une grande culture, le <a href="../corporations/jedi.html">Jedi</a> <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> a souvent eu besoin de lui pour avoir des informations.</p>
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>L'Attaque des Clones</td>
+								<td><a href="../movies/movie2.html">L'Attaque des Clones</a></td>
 							</tr>
 							<tr>
 								<th>Première apparition :</th>
@@ -44,7 +44,7 @@
 							</tr>
 							<tr>
 								<th>Planète d'origine :</th>
-								<td>Coruscant</td>
+								<td><a href="../planets/coruscant.html">Coruscant</a></td>
 							</tr>
 							<tr>
 								<th>Métier :</th>
@@ -61,8 +61,7 @@
 					<hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-					<p>Dexter a indirectement joué un grand rôle dans la Guerre des Clones, en indiquant à Obi-Wan que la pointe empoisonnée (Kamino Saberdart) envoyée par Jango Fett sur la chasseuse de primes Zam Wesell provenait de Kamino.</p>  
-					<p></p>   
+					<p>Dexter a indirectement joué un grand rôle dans la Guerre des Clones, en indiquant à <a href="../characters/obi-wan_kenobi.html">Obi-Wan</a> que la pointe empoisonnée (Kamino Saberdart) envoyée par <a href="../characters/jango_fett.html">Jango Fett</a> sur la chasseuse de primes <a href="../characters/zam_wesell.html">Zam Wesell</a> provenait de <a href="../planets/kamino.html">Kamino</a>.</p>    
 					<p></p> 
                 </div>
 			</div>
