--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -13,164 +13,174 @@
         <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
 
-    <div class="containertrio">
+   
         <h1>les personnages de la trilogie</h1>
 
-        <div class="item1">
+        <div class="list">
 
             <h2>personnages récurent de la trilogie</h2>
 
-            <div class="anakin"><a href="#"><img
+            <div class="anakin card">
+                <a href="#">
+                    <img
                         src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
-                        alt=""></a></div>
-            <div class="palpatine"><a href="#"><img
-                        src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
-                        alt=""></a>
+                        alt="">
+                        <p>anakin</p>
+                </a>
+                
             </div>
-            <div class="amidala"><a href="#"><img
+                        
+            <div class="palpatine card" ><a href="#"><img
+                        src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
+                        alt=""><p> générale palpatine</p></a>
+            </div>
+            <div class="amidala card"><a href="#"><img
                         src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
-                        alt=""></a></div>
-            <div class="obiwan"><a href="#"><img
-                        src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" alt=""></a></div>
-            <div class="mace"><a href="#"><img
-                        src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" alt=""
-                        width="50px"></a></div>
+                        alt=""><p>amidala</p></a></div>
+            <div class="obiwan card"><a href="#"><img
+                        src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" 
+                        alt=""><p>obiwan ken obi</p></a></div>
+            <div class="mace card"><a href="#"><img
+                        src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" 
+                        alt=""
+                        width="50px">mace windu</a></div>
         </div>
 
 
 
-        <div class="item2">
+        <div class="list">
             <h2>Les protagonistes apparu dans la menace fantome</h2>
 
 
-            <div class="itemvalorum"><a href="#"><img
+            <div class="valorum card"><a href="#"><img
                         src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>valorum</p></div>
 
-            <div class="gunray"><a href="#"><img
+            <div class="gunray card"><a href="#"><img
                         src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>nute gunray</p></div>
 
-            <div class="qui"><a href="#"></a><img
+            <div class="qui card"><a href="#"><img
                     src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="">
-            </div>
+                </a><p>qui gon jinn</p></div>
 
-            <div class="boss"><a href="#"><img
+            <div class="boss card"><a href="#"><img
                         src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>boss nas</p></div>
 
-            <div class="jar"><a href="#"><img
+            <div class="jar card"><a href="#"><img
                         src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>Jar jar bink</p></div>
 
-            <div class="ki"><a href="#"></a><img
+            <div class="ki card"><a href="#"><img
                     src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="">
-            </div>
+            </a><p>ki di mundi</p></div>
 
-            <div class="yoda "><a href="#"><img
+            <div class="yoda  card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>Yoda</p></div>
 
-            <div class="dark"><a href="#"><img
+            <div class="dark card"><a href="#"><img
                         src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>Dark maul</p></div>
 
-            <div class="itemshmi"><a href="#"><img
+            <div class="shmi card"><a href="#"><img
                         src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>shmi skywalker</p></div>
 
-            <div class="watto"><a href="#"><img
+            <div class="watto card"><a href="#"><img
                         src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="">
                 </a></div>
 
-            <div class="sio"><a href="#"><img
+            <div class="sio card"><a href="#"><img
                         src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
                 </a></div>
 
-            <div class="c3po"><a href="#"><img
+            <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>C3po</p></div>
 
-            <div class="r2d2"><a href="#"><img
+            <div class="r2d2" card><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>R2d2</p></div>
 
-            <div class="tanaka"><a href=""><img
+            <div class="tanaka card"><a href=""><img
                         src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>Captain tanaka</p></div>
 
         </div>
 
 
 
-        <div class="item3">
+        <div class="list">
             <h2>Les protagonistes apparu dans l'attaque des clones </h2>
 
-            <div class="compte"><a href="#"><img
+            <div class="compte card"><a href="#"><img
                         src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>compte doku</p></div>
 
-            <div class="zam"><a href="#"><img
+            <div class="zam card"><a href="#"><img
                         src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>Zam wesell</p></div>
 
-            <div class="poggle "><a href="#"><img
+            <div class="poggle  card"><a href="#"><img
                         src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a><p>poogle</p></div>
 
-            <div class="boba"><a href="#"><img
+            <div class="boba card"><a href="#"><img
                         src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>boba fett</p></div>
 
-            <div class="jango"><a href="#"><img
+            <div class="jango card"><a href="#"><img
                         src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="">
-                </a></div>
+                </a><p>Jango</p></div>
 
-            <div class="tawn"><a href="#"><img
+            <div class="tawn card"><a href="#"><img
                         src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="">
-                </a></div>
+                <p>Tawn me</p</a>></div>
 
-            <div class="dexter"><a href="#"><img
+            <div class="dexter card"><a href="#"><img
                         src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="">
-                </a></div>
+               <p>Dexter</p></a></div>
 
-            <div class="typho"><a href="#"><img
+            <div class="typho" card><a href="#"><img
                         src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" alt="">
-                </a></div>
+               <p>Gregar typho</p></a></div>
 
         </div>
 
 
-        <div class="item4">
+        <div class="list">
             <h2>Les protagonistes apparu dans la revanches des shits </h2>
 
 
-            <div class="c3po"><a href="#"><img
+            <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                </a></div>
+                <p>C3po</p></a></div>
 
-            <div class="r2d2"><a href="#"><img
+            <div class="r2d2 card"><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                </a></div>
+                ><p>R2d2</p></a</div>
 
-            <div class="yoda"><a href="#"><img
+            <div class="yoda card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
-                </a></div>
+                <p>Yoda</p></a></div>
 
-            <div class="grievous"><a href="#"><img
+            <div class="grievous card"><a href="#"><img
                         src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" alt="">
-                </a></div>
+               <p>Generale grievous</p> </a></div>
 
-            <div class="chewbacca"><a href="#"><img
+            <div class="chewbacca card"><a href="#"><img
                         src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
-                </a></div>
+                <p>Chewbacca</p></a></div>
 
-            <div class="tarfull"><a
-                    href="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg"></a>
-            </div>
+            <div class="tarfull card"><a
+                    href="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg">
+                Tartfull</a></div>
 
-            <div class="organa"><a href="#"><img
-                        src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt=""></a></div>
+            <div class="organa card"><a href="#"><img
+                        src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt="">
+                    Organa></a></div>
 
 
 
@@ -178,7 +188,7 @@
 
 
 
-    </div>
+   
     <footer>
         <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
