--- a/views/characters/taun_we.html
+++ b/views/characters/taun_we.html
@@ -18,22 +18,22 @@
             <div class="presentation">
                 <div class="histoire">
                     <h1>Taun we</h1>
-                    <p>Taun We est une assistante du premier ministre de Kamino. C'est elle qui présente l'Armée de
-                        Clone au Jedi Obiwan Kenobi dans l'Episode II.</p>
+                    <p>Taun We est une assistante du premier ministre de <a href="../planets/kamino.html">Kamino</a>. C'est elle qui présente l'Armée de
+                        Clone au <a href="../corporations/jedi.html">Jedi</a> <a href="../characters/obi-wan_kenobi.html">Obi-wan Kenobi</a> dans l'Episode II.</p>
                 </div>
                 <div class="presentoir">
                     <img src="" alt="">
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
-                            <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a>
+                            <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a>
                             </td>
                         </tr>
                         <th>Praière apparition :</th>
-                        <td><a>La Menace fantôme</a> </td>
+                        <td><a href="../movies/movie1.html">La Menace fantôme</a> </td>
                         <tr>
                             <th>Affiliations :</th>
-                            <td>politique </td>
+                            <td>Politique </td>
                         </tr>
                         <tr>
                             <th>Race :</th>
@@ -41,19 +41,19 @@
                         </tr>
                         <tr>
                             <th>Genre :</th>
-                            <td>Feminin </td>
+                            <td>Féminin </td>
                         </tr>
                         <tr>
                             <th>Planète d'origine :</th>
-                            <td>kamino</td>
+                            <td><a href="../planets/kamino.html">Kamino</a></td>
                         </tr>
                         <tr>
                             <th>Métier :</th>
-                            <td>assistante premier ministre lama su </td>
+                            <td>Assistante premier ministre Lama Su </td>
                         </tr>
                         <tr>
                             <th>Côté de la force :</th>
-                            <td>ne maitrise pas la force </td>
+                            <td>Ne maitrise pas la force </td>
                         </tr>
                     </table>
                 </div>
