--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -160,7 +160,7 @@
 
             <div class="r2d2 card"><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                ><p>R2d2</p></a</div>
+                <p>R2d2</p></a</div>
 
             <div class="yoda card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
@@ -175,12 +175,12 @@
                 <p>Chewbacca</p></a></div>
 
             <div class="tarfull card"><a
-                    href="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg">
-                Tartfull</a></div>
+                    href="#"><img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
+               <p>Tartfull</p> </a></div>
 
             <div class="organa card"><a href="#"><img
                         src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt="">
-                    Organa></a></div>
+                   <p>Organa</p> </a></div>
 
 
 
