--- a/views/characters/sio_bibble.html
+++ b/views/characters/sio_bibble.html
@@ -1,71 +1,87 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css">
-		<title>Sio Bibble</title>
-	</head>
-	<body>
-		<header>
-			<iframe src="../../views/header.html" frameborder="0"></iframe>
-		</header>
-		<main>
-			<div class="container">
-				<div class="presentation">
-					<div class="histoire">
-                        <h1>Sio Bibble</h1>
-                        <p>Sio Bibble fut le gouverneur de Naboo durant les règnes des Reines Padmé Amidala, Jamillia et Apailana. Il fut retenu prisonnier par la Fédération du commerce après le Blocus de Naboo, lorsque la Reine était partie pour Coruscant.</p>
-                    </div>
-                    <div class="presentoir">
-                        <img src="" alt="">
-                        <table>
-							<tr>
-								<th>Apparait dans:</th>
-								<td>La Menace Fantôme</td>
-							</tr>
-							<tr>
-								<th>Première apparition:</th>
-								<td>La Menace Fantôme</td>
-							</tr>
-							<tr>
-								<th>Affiliation:</th>
-								<td>Maison Royal de Naboo</td>
-							</tr>
-							<tr>
-								<th>Race:</th>
-								<td>Humain</td>
-							</tr>
-							<tr>
-								<th>Genre:</th>
-								<td>Masculin</td>
-							</tr>
-							<tr>
-								<th>Planète d'origine:</th>
-								<td>Naboo</td>
-							</tr>
-							<tr>
-								<th>Métier:</th>
-								<td>Gouverneur</td>
-							</tr>
-							<tr>
-								<th>Côté de la Force:</th>
-								<td>Lumière</td>
-							</tr>
-						</table>
-                    </div>
-				</div>
-                <div class="relations">
-					<hr>
-                    <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
-					<p>Natif de Naboo, Sio Bibble était un éminent philosophe qui devint Gouverneur de Naboo durant le règne de la Reine Padmé Amidala.</p>  
-                </div>
-			</div>
-		</main>
-		<footer>
-			<iframe src="../../views/footer.html" frameborder="0"></iframe>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <title>Sio Bibble</title>
+  </head>
+  <body>
+    <header>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
+    <main>
+      <div class="container">
+        <div class="presentation">
+          <div class="histoire">
+            <h1>Sio Bibble</h1>
+            <p>
+              Sio Bibble fut le gouverneur de
+              <a href="../planets/naboo.html">Naboo</a> durant les règnes des
+              Reines
+              <a href="../characters/padme_amidala.html">Padmé Amidala</a>,
+              Jamillia et Apailana. Il fut retenu prisonnier par la Fédération
+              du commerce après le Blocus de
+              <a href="../planets/naboo.html">Naboo</a>, lorsque la Reine était
+              partie pour <a href="../planets/coruscant.html">Coruscant</a>.
+            </p>
+          </div>
+          <div class="presentoir">
+            <img src="" alt="" />
+            <table>
+              <tr>
+                <th>Apparait dans:</th>
+                <td><a href="../movies/movie1.html">La Menace Fantôme></a></td>
+              </tr>
+              <tr>
+                <th>Première apparition:</th>
+                <td><a href="../movies/movie1.html">La Menace Fantôme></a></td>
+              </tr>
+              <tr>
+                <th>Affiliation:</th>
+                <td>
+                  Maison Royal de <a href="../planets/naboo.html">Naboo</a>
+                </td>
+              </tr>
+              <tr>
+                <th>Race:</th>
+                <td>Humain</td>
+              </tr>
+              <tr>
+                <th>Genre:</th>
+                <td>Masculin</td>
+              </tr>
+              <tr>
+                <th>Planète d'origine:</th>
+                <td><a href="../planets/naboo.html">Naboo</a></td>
+              </tr>
+              <tr>
+                <th>Métier:</th>
+                <td>Gouverneur</td>
+              </tr>
+              <tr>
+                <th>Côté de la Force:</th>
+                <td>Lumière</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="relations">
+          <hr />
+          <h2>Rôle dans l'histoire</h2>
+          <img src="" alt="" />
+          <p>
+            Natif de <a href="../planets/naboo.html">Naboo</a>, Sio Bibble était
+            un éminent philosophe qui devint Gouverneur de
+            <a href="../planets/naboo.html">Naboo</a> durant le règne de la
+            Reine <a href="../characters/padme_amidala.html">Padmé Amidala</a>.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
+  </body>
 </html>
