--- a/views/corporations/senat_galactique.html
+++ b/views/corporations/senat_galactique.html
@@ -19,7 +19,7 @@
 							Le Sénat Galactique avait existé pendant des centaines de générations, devenant l'une des institutions fondatrices de la Constitution Galactique qui avait établi la <a href="../corporations/republique_galactique.html">République
 							Galactique</a>. Avec ses immenses chambres, le Sénat réunissait des milliers de sénateurs venant de tous les mondes et ayant ratifié la constitution républicaine. Ceux-là se réunissaient et
 							débattaient des solutions à apporter à des problèmes donnés. Quelques sénateurs représentaient un seul monde, et d'autres sénateurs représentaient des secteurs, c'est-à-dire un
-							rassemblement de mondes. Chacun venait alimenter les débats inhérents à l'organisation de la République et pouvait, si besoin, plaider sa cause auprès de l'ensemble du congrès.
+							rassemblement de mondes. Chacun venait alimenter les débats inhérents à l'organisation de la <a href="../corporations/republique_galactique.html">République</a> et pouvait, si besoin, plaider sa cause auprès de l'ensemble du congrès.
 						</p>
 					</div>
 					<div class="presentoir">
