--- a/views/corporations/federation_du_commerce.html
+++ b/views/corporations/federation_du_commerce.html
@@ -16,15 +16,20 @@
 					<div class="histoire">
 						<h1>La Fédération du commerce</h1>
 						<p>
-							La Fédération du commerce était l'une des plus grandes entreprises de la galaxie sous la République Galactique. La Fédération du commerce fut fondée par les Neimoidiens sur Cato Neimoidia. Principalement basée sur les planètes des Colonies, la Fédération était devenue tellement importante qu'elle reçut un siège au Sénat Galactique. Son dernier représentant fut Lott Dod. Elle était dirigée par un Vice-Roi tel que Nute Gunray. En réponse à la taxation des routes commerciales, la Fédération instaura un blocus sur la paisible planète Naboo. En réalité, il s'agissait d'une manœuvre du Seigneur Sith Dark Sidious, alors Sénateur de Naboo, afin d'être élu Chancelier Suprême. Une dizaine d'années plus tard, la Fédération du commerce rejoignit la Confédération des Systèmes Indépendants, bien qu'elle conservât son siège au Sénat. Ses dirigeants furent massacrés en 19 av.BY sur Mustafar, comme tous les autres leaders séparatistes. Suite à l'avènement de l'Empire Galactique, la Fédération fut nationalisée et toutes ses richesses furent confiées à Arsin Crassus.
-                        </p>
+							La Fédération du commerce était l'une des plus grandes entreprises de la galaxie sous la <a href="../corporations/republique_galactique.html">République Galactique</a> . La Fédération du commerce fut fondée par les Neimoidiens sur Cato
+							Neimoidia. Principalement basée sur les planètes des Colonies, la Fédération était devenue tellement importante qu'elle reçut un siège au <a href="../corporations/senat_galactique.html">Sénat Galactique</a>. Son dernier représentant fut
+							Lott Dod. Elle était dirigée par un Vice-Roi tel que <a href="../characters/nute_gunray.html">Nute Gunray</a>. En réponse à la taxation des routes commerciales, la Fédération instaura un blocus sur la paisible planète <a href="../planets/naboo.html">Naboo</a>. En
+							réalité, il s'agissait d'une manœuvre du Seigneur Sith <a href="../characters/palpatine.html">Dark Sidious</a>, alors Sénateur de <a href="../planets/naboo.html">Naboo</a>, afin d'être élu Chancelier Suprême. Une dizaine d'années plus tard, la <a href="../corporations/federation_du_commerce.html">Fédération du
+							commerce</a> rejoignit la <a href="../corporations/conseil_separatiste.html">Confédération des Systèmes Indépendants</a>, bien qu'elle conservât son siège au Sénat. Ses dirigeants furent massacrés en 19 av.BY sur <a href="../planets/mustafar.html">Mustafar</a>, comme tous les autres
+							leaders séparatistes. Suite à l'avènement de l'<a href="../corporations/empire_galactique.html">Empire Galactique</a>, la Fédération fut nationalisée et toutes ses richesses furent confiées à Arsin Crassus.
+						</p>
 					</div>
 					<div class="presentoir">
 						<img src="" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Menace fantôme, L'Attaque des clones, La Revanche des Sith</td>
+								<td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
